Fixed the bugs with the NFT images not showing

--- a/src/Components/NftCard/NftCard.css
+++ b/src/Components/NftCard/NftCard.css
@@ -32,7 +32,7 @@
     margin-top: 5px;
 }
 
-.nft-price-number .eth-logo {
+.eth-logo {
     width: 50px;
     height: 50px;
 }
@@ -90,4 +90,15 @@
 
 .ant-modal {
     background: transparent !important;
+}
+
+.modal-logo-price {
+    display: flex;
+    align-items: center;
+}
+
+.modal-price {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #815EE3;
 }
